src/test/deca/context/invalid/SansObjet/DeclVar-EQ-float-boolean-boolean.deca
// Description:
//    Declaration of a float variable using == operation between a boolean variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  true; 
    boolean y = false; 
    float z = x == y ; 
}
